[build-system]
requires = ["hatchling", "hy>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "hylang-migrations"
version = "0.1.0"
description = "Pure Hylang schema migration tool for SQLite with SQLObject integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["hylang", "lisp", "migrations", "database", "sqlite", "sqlobject", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Lisp",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "hy>=1.0.0",
    "hyrule>=0.6.0",
    "sqlobject>=3.10.1",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hylang-migrations"
Documentation = "https://github.com/yourusername/hylang-migrations#readme"
Repository = "https://github.com/yourusername/hylang-migrations.git"
"Bug Tracker" = "https://github.com/yourusername/hylang-migrations/issues"

[project.scripts]
hylang-migrate = "hylang_migrations.cli_wrapper:main"
hy-migrate = "hylang_migrations.cli_wrapper:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hylang_migrations"]

[tool.hatch.build]
include = [
    "src/hylang_migrations/**/*.hy",
    "src/hylang_migrations/**/*.py",
    ".claude/agents/*.md"
]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "build>=0.10.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "test_*.hy"]

[tool.coverage.run]
source = ["src/hylang_migrations"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
