[build-system]
requires = ["hatchling", "hy>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "hylang-migrations"
version = "0.1.0"
description = "Pure Hylang database migration tool for SQLite"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "James", email = "james@example.com"}]
keywords = ["hylang", "migrations", "database", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Lisp",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
]

dependencies = [
    "hy>=1.0.0",
    "hyrule>=0.6.0",
    "sqlobject>=3.10.1",
]

[project.urls]
Repository = "https://github.com/jaymd96/hylang-migration"

[project.scripts]
hylang-migrate = "hylang_migrations.cli_wrapper:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hylang_migrations"]
include = [
    "src/hylang_migrations/**/*.hy",
    "src/hylang_migrations/**/*.py"
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build]
sources = ["src"]