[metadata]
name = hylang-migrations
author = James
author_email = james@example.com
description = Pure Hylang database migration tool for SQLite - schema versioning and management in Lisp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/hylang-migrations
project_urls =
    Bug Tracker = https://github.com/yourusername/hylang-migrations/issues
    Documentation = https://github.com/yourusername/hylang-migrations#readme
    Source Code = https://github.com/yourusername/hylang-migrations
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Lisp
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Version Control
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    hy>=1.0.0
    hyrule>=0.6.0
    sqlobject>=3.10.1
    colorama>=0.4.6
    python-dotenv>=1.0.0
    tabulate>=0.9.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hylang-migrate = hylang_migrations.cli_wrapper:main
    hy-migrate = hylang_migrations.cli_wrapper:main

[options.package_data]
hylang_migrations = 
    *.hy
    templates/*.hy
    
[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
python_files = test_*.py test_*.hy